fix scroll down visibility

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -38,11 +38,12 @@ header {
     transform: rotate(90deg);
     font-weight: 300;
     font-size: 0.9rem;
-    color: rgba(0, 0, 0, 0.726);
+    /*color: rgba(0, 0, 0, 0.726);*/
+    color: grey;
 }
 
 .scroll__down__right:hover, .scroll__down__left:hover{
-    color: rgba(0, 0, 0, 0.301);
+    color: rgb(70, 69, 69);
 }
 
 .scroll__down__right {
